# SysOpy

./: .gitignore
lab1/: CMakeLists.txt  Makefile  Makefile2  dyn_main.c  library.c  library.h  main.c  test.c
lab1/zad2/: library.c  library.h  test.c
lab10/zad1/: client.c  common.h  server.c
lab10/zad2/: CMakeLists.txt  client.c  common.h  server.c
lab2/zad1/: library.c  library.h  main.c
lab2/zad2/: main.c  zad2
lab3/zad1/: main.c
lab3/zad2/: main.c
lab3/zad3/: main.c  memory.c  time.c
lab4/zad1/: main.c  main_proc  main_proc.c
lab4/zad2/: main.c
lab4/zad3/: main.c
lab5/zad1/: main.c
lab5/zad2/: main.c  master.c  slave.c
lab6/zad1/: client  client.c  msg_buf.h  server  server.c
lab6/zad2/: client.c  numbers.h  server.c
lab7/zad1/: barber.c  client.c  common.h
lab7/zad2/: barber.c  clear.c  client.c  common.h
lab8/: CMakeLists.txt  Times.txt  filter.txt  main.c
lab9/zad1/: config.txt  main.c  pan-tadeusz.txt
lab9/zad2/: config.txt  main.c
